--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,12 @@
 body {
+  background: black;
   height: 600px;
   text-align: center;
 }
 
 .gamescreen {
-  background: red;
+  background: black;
+  border: 3px solid red;
   display: inline-block;
   width: 500px;
   height: 100%;
