--- a/css/app.css
+++ b/css/app.css
@@ -3,10 +3,15 @@ body {
   height: 600px;
   text-align: center;
   font-family: 'Roboto Slab', serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .gamescreen {
-  background: black;
   position: absolute;
   margin: auto;
   left: 0;
